# modern_durak_game_shared

./: CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  conanfile.py  conanfile.txt
modern_durak_game_shared/: CMakeLists.txt  modern_durak_game_shared.hxx
test/: CMakeLists.txt  main.cxx  userDefinedGameOption.hxx
test_package/: CMakeLists.txt  example.cpp
